# kotonoha_core

./: .gitignore  Cargo.toml  SPEC.md  run.bat  tasks.json  tasks_test.json  tasks_test_add.json  tasks_test_done.json
.github/workflows/: ci.yml
src/: chat.rs  encourage.rs  kotonoha.rs  lib.rs  main.rs  models.rs  speech.rs  tasks.rs  tts.rs
tests/: cli_flow.rs  integration.rs  speech_queue.rs
