[package]
name = "kotonoha_core"
authors = ["high-temperature"]
version = "0.1.0"
edition = "2024"

[lib]
name = "kotonoha_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"  # `.env` 読み込み用
rodio = "0.17"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"  # グローバル変数の初期化用
rand = { version = "0.9.1"}  # ランダムな数値生成用
strsim = "0.11"