[package]
name = "kotonoha_core"
version = "0.1.0"
edition = "2024" 
authors = ["high-temperature"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
rand = "0.9.1"
strsim = "0.11"
uuid = { version = "1.16.0", features = ["v4"] }

# TTSを使うときだけ rodio, reqwest を使う
reqwest = { version = "0.11", optional = true, features = ["json"] }
rodio = { version = "0.17", optional = true }

[features]
default = ["tts"]
tts = ["reqwest", "rodio"]

[[bin]]
name = "kotonoha_core"
path = "src/main.rs"
